<resources>
    <string name="app_name">CanvasClock</string>

    <string name="clock_list">시계 목록</string>
    <string name="full_list">전체 목록</string>
    <string name="faq">자주묻는 질문</string>

    <string name="form_time">%1$02d:%2$02d</string>
    <string name="form_date">%1$d월 %2$d일</string>

    <string name="modify_time_handle_color">시/분/초침 색상 수정</string>
    <string name="modify_clock_parts">시계 파츠 수정</string>
    <string name="add_clock">시계 생성하기</string>
    <string name="switch_to_clock_mode">시계 모드로 전환</string>

    <string name="modify">수정하기</string>
    <string name="delete">삭제하기</string>
    <string name="cancel">취소하기</string>
    <string name="save">저장하기</string>
    <string name="add_clock_part">+ 시계 파츠 추가하기</string>
    <string name="go_back">돌아가기</string>
    <string name="set_time_handle">시/분/초침 설정하기</string>
    <string name="create">생성하기</string>
    <string name="choose_clock">시계 선택</string>
    <string name="back_to_home">홈으로 돌아가기</string>
    <string name="complete_modify_part">파츠 수정 완료하기</string>
    <string name="move_to_next_step">다음단계로 이동하기</string>

    <string name="complete">완료</string>
    <string name="cancellation">취소</string>

    <string name="r">R</string>
    <string name="b">B</string>
    <string name="g">G</string>
    <string name="transparency">투명도</string>
    <string name="color_in_use">사용중인 색상</string>
    <string name="selection">선택</string>

    <string name="start_time">시작 시각</string>
    <string name="end_time">종료 시각</string>
    <string name="color1">색상1</string>
    <string name="color2">색상2</string>
    <string name="start_point">시작 지점</string>
    <string name="middle_point">중간 지점</string>
    <string name="end_point">종료 지점</string>
    <string name="stroke_color">테두리 색상</string>
    <string name="stroke_width">테두리 두께</string>
    <string name="use_middle_stroke">중앙선 테두리 사용</string>
    <string name="not_use">사용안함</string>
    <string name="hour_handle">시침</string>
    <string name="minute_handle">분침</string>
    <string name="second_handle">초침</string>께
    <string name="thickness">두께</string>
    <string name="color">색상</string>

    <string name="change_background_color">배경색상 변경</string>
    <string name="change_text_color">글자색상 변경</string>

    <string name="use_24_hour_mode">24시간 형식 사용</string>

    <string name="message_cannot_change_time_range_when_multiple_part_selected">여러 부품을 한번에 수정할 때는 시간 범위를 조정할 수 없습니다.</string>
    <string name="message_clock_must_have_at_least_one_part">하나 이상의 시계 부품을 생성해주세요</string>
    <string name="message_select_more_than_one_part">하나 이상의 부품을 선택해주세요</string>
    <string name="message_confirm_cancel_modify">수정된 내용이 있습니다.\n해당 내용을 반영하지 않고\n취소할까요?</string>
    <string name="message_not_loading_yet">로딩중입니다, 잠시후에 다시 실행해주세요</string>
    <string name="message_can_delete_clock_only_more_than_one">2개 이상의 시계가 있는 경우에만 삭제할 수 있습니다.</string>
    <string name="message_confirm_delete_clock">삭제된 시계는 되돌릴 수 없습니다.\n이 시계를 삭제할까요?</string>
    <string name="message_deletion_success">삭제되었습니다.</string>
    <string name="message_deletion_failure">삭제에 실패했습니다. 잠시 후에 다시 시도해주세요.</string>
    <string name="message_confirm_cancellation_create_clock">시계 추가 작업을\n취소할까요?</string>

    <string name="message_battery_setting_for_widget_title">위젯 사용을 위한 배터리 설정</string>
    <string name="message_battery_setting_for_widget_body">만약 시계 위젯이 멈추거나 잘 동작하지 않는 경우\n설정-애플리케이션-CanvasClock-배터리 에서 "백그라운드 실행"을 키거나 혹은 배터리 사용 제한을 해제하는 방향으로 설정해주세요</string>

    <string name="move_to_native_setting">시스템 설정 화면으로 이동하기 >></string>
</resources>